# amd-shark-ai

./: .pre-commit-config.yaml  README.md  data.json  requirements-dev.txt  requirements-iree-pinned.txt  requirements-iree-unpinned.txt
.github/actions/pkgci-setup/: action.yml
.github/workflows/: .ci_boo_conv.yml.swp  .ci_boo_on_mi355.yml.swp  boo_on_rdna3.yml  build_packages.yml  ci-amdsharktank-nightly.yml  ci-amdsharktank.yml  ci-amdsharktuner.yml  ci-libshortfin.yml  ci-llama-large-tests.yaml  ci-llama-quick-tests.yaml  ci-sdxl.yaml  ci-sglang-benchmark.yml  ci-sglang-integration-tests.yml  ci-shortfin-nightly.yml  ci_boo_conv.yml  ci_boo_on_mi355.yml  ci_boo_on_rdna3.yml  ci_boo_on_rdna4.yml  ci_boo_torch_pin.txt  ci_check_content.yml  ci_e2e_llm_model_test.yml  ci_eval_llama_3.1_8b.yml  ci_eval_short.yaml  ci_generate_irpa.yml  ci_linux_x64_asan-libshortfin.yml  ci_linux_x64_nogil-libshortfin.yml  ci_llama_3.1_405b_fp4.yml  ci_llama_3.1_70b_fp16.yml  ci_llama_3.1_70b_fp8.yml  ci_llama_3.1_8b_fp16.yml  ci_llama_3.1_8b_fp16_from_tom.yml  ci_llama_3.1_8b_fp16_nightly_harness.yml  ci_llama_3.1_8b_fp8.yml  ci_llama_3.1_8b_fp8_from_tom.yml  ci_mistral_nemo_instruct_2407.yml  ci_sdxl_flux_serving.yml  ci_sync_resources.yml  cleanup_releases.yml  pkgci_amdshark_ai.yml  pre-commit.yaml  (+2 more)
amdshark-ai/: pyproject.toml
amdsharktank/: README.md  conftest.py  pyproject.toml  requirements-tests.txt
amdsharktank/amdsharktank/: __init__.py
amdsharktank/amdsharktank/evaluate/: README.md  perplexity_iree.py
amdsharktank/amdsharktank/kernels/: batch_matmul_transpose_b.py
amdsharktank/amdsharktank/tools/: e2e_model_test.py  eval_llm_vmfb.py
amdsharktank/amdsharktank/types/: ocp_floats.py  theta.py
amdsharktank/amdsharktank/utils/: cli.py  evaluate.py  export.py  hf.py  iree.py  testing.py  wave_workaround.py
amdsharktank/build_tools/: install_test_dependencies.sh
amdsharktank/tests/docs/: llama_benchmarking_instructions.md
amdsharktuner/: .gitignore  PYPI_README.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
amdsharktuner/amdsharktuner/: candidate_gen.py  candidate_ordering.py  common.py  constraint_generator.py  dispatch_constraints.py  dispatch_parser.py  libtuner.py  process_utils.py  smt_candidate_gen.py  spec_builder.py  test_utils.py  tuner_base.py
amdsharktuner/boo_tuner/: boo_tuner.py  example_configs.txt
amdsharktuner/dispatch_tuner/: README.md  analyze_tuning_results.py  check_comp_rate.py  check_tuning_results.py  compile_dump_exe.py  compile_flags.txt  csv_to_seeds.py  dispatch_tuner.py  dispatches_tuner.py  dump_sml_gemm.py  extract_tiling_from_mlir.py  gemm_intensity.py  gemm_intensity_number.py  matvec_sample.mlir  mlir_record.csv  seed_to_tiling.py  tiling_to_seeds.py  tuning_check_results.csv  tuning_check_results.json
amdsharktuner/fusilli_tuner/: README.md  __init__.py  fusilli_tuner.py
amdsharktuner/model_tuner/: .gitattributes  README.md  attn_parity_compiler.txt  attn_parity_python.txt  attn_parity_results.txt  model_tuner.py  parity_check.py
amdsharktuner/tests/: boo_tuner_test.py  candidate_gen_test.py  candidate_ordering_test.py  common_test.py  conftest.py  constraint_generator_test.py  dispatch_constraints_test.py  dispatch_parser_test.py  fusilli_tuner_test.py  libtuner_test.py  matvec_spec_builder_test.py  process_utils_test.py  rocm_attention_compiler_bridge_test.py  smt_candidate_gen_test.py  spec_builder_test.py  test_utils.py
build_tools/pkgci/: setup_venv.py
build_tools/python_deploy/: pypi_deploy.sh  write_requirements.py
docs/: amdgpu_kernel_optimization_guide.md  developer_guide.md  nightly_releases.md  quantization.md  tune_sdxl.md
docs/empirical-lds/: cdna3info.md  cdna4info.md  lds_summary.md  rdna3info.md  rdna4info.md
docs/empirical-lds/harness/: .gitignore  CMakeLists.txt  LICENSE  README.md  rocprofv3_counters.txt
docs/empirical-lds/harness/bench/: lds_phase_mask.hip.cpp
docs/empirical-lds/harness/docs/: rocprof-counters.md
docs/empirical-lds/harness/scripts/: profile_bank_count.py  profile_common.py  profile_phase_experiment.py  profile_phase_groups.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_03eff491906e13e8_export_test_py.html  z_04b7f9a4185de1e2_diffuser_ref_py.html  z_04b7f9a4185de1e2_run_vae_py.html  z_04b7f9a4185de1e2_sample_data_py.html  z_0fa15b4914dade51_boo_tuner_test_py.html  z_0fa15b4914dade51_candidate_gen_test_py.html  z_0fa15b4914dade51_candidate_ordering_test_py.html  z_0fa15b4914dade51_common_test_py.html  z_0fa15b4914dade51_conftest_py.html  z_0fa15b4914dade51_constraint_generator_test_py.html  z_0fa15b4914dade51_dispatch_constraints_test_py.html  z_0fa15b4914dade51_dispatch_parser_test_py.html  z_0fa15b4914dade51_fusilli_tuner_test_py.html  z_0fa15b4914dade51_libtuner_test_py.html  z_0fa15b4914dade51_process_utils_test_py.html  z_0fa15b4914dade51_smt_candidate_gen_test_py.html  z_0fa15b4914dade51_spec_builder_test_py.html  z_1148164081443c19_integration_test_py.html  z_14906848efb484b4___init___py.html  z_14906848efb484b4_actions_py.html  z_1dd88a77feb459d0_testing_py.html  z_1dd88a77feb459d0_toy_llama_py.html  z_20db789b99d94a1d_export_paged_llm_v1_py.html  z_20db789b99d94a1d_paged_llm_v1_py.html  z_21e0f6681f97e449___init___py.html  z_227b51765c819e7a___init___py.html  z_227b51765c819e7a_dummy_py.html  z_2384b11b852a8c48_llama_integration_test_py.html  z_2738e0764e391120_clip_test_py.html  z_2f4e390a4dd5d1cf_pytest_fixtures_test_py.html  z_2fb951768711895e___init___py.html  z_2fb951768711895e_rocm_candidate_ordering_py.html  z_2fb951768711895e_rocm_common_py.html  z_2fb951768711895e_rocm_constraint_generators_py.html  z_2fb951768711895e_rocm_dispatch_constraints_py.html  z_2fb951768711895e_rocm_parsers_py.html  (+267 more)
scripts/: download_export_irpa.sh  export_and_compile.sh  irpa_export_validate_upload.sh  run_iree_benchmark.sh  run_sdxl_flux.sh  setenv.sh  test_gpu
shortfin/: CMakeLists.txt  README.md  pyproject.toml  requirements-tests-nogil.txt  requirements-tests.txt  setup.py
shortfin/python/: lib_ext.cc
(+673 files in other folders)
